custom ink highlighter added

--- a/src/app.html
+++ b/src/app.html
@@ -10,5 +10,6 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="%sveltekit.assets%/scripts/prism.js"></script>
+		<script src="%sveltekit.assets%/scripts/ink-prism.js"></script>
 	</body>
 </html>
