--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link type="text/css" rel="stylesheet" href="%sveltekit.assets%/styles/prism.css">
+		<link type="text/css" rel="stylesheet" href="%sveltekit.assets%/styles/prism-night-owl.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
