--- a/src/app.html
+++ b/src/app.html
@@ -11,5 +11,6 @@
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="%sveltekit.assets%/scripts/prism.js"></script>
 		<script src="%sveltekit.assets%/scripts/ink-prism.js"></script>
+		<script src="%sveltekit.assets%/scripts/yarnspinner-prism.js"></script>
 	</body>
 </html>
